Bug 120334 - Crash when closing dialog Position and Size
Summary: Crash when closing dialog Position and Size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
: 121434 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-05 07:32 UTC by Cor Nouws
Modified: 2018-11-15 23:50 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2018-10-05 07:32:09 UTC
- new Writer document
- add shape from Drawing tool bar
- context menu, open dialog Position and Size
- ESC to close dialog
  > Crash

Found in Version: 6.2.0.0.alpha0+
Build ID: 896a1f8630cc4948e23fc8cce926e4d0910feb96
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-09-30_04:43:14
Locale: nl-NL (nl_NL.UTF-8); Calc: threaded
Comment 1 BogdanB 2018-10-05 07:46:05 UTC
No crash on

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 3208fcb3a36d75d6290d9c548430682f153b09db
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-20_22:43:20
Locale: ro-RO (ro_RO); Calc: threaded
Comment 2 BogdanB 2018-10-05 08:40:02 UTC
No crash on

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 5f5d890c242b8a092804991dba809f6f4287cfb2
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-03_23:04:03
Locale: ro-RO (ro_RO); Calc: threaded
Comment 3 Cor Nouws 2018-10-05 10:18:34 UTC
apparently Linux only
Comment 4 Roman Kuznetsov 2018-10-05 15:00:43 UTC
(In reply to Cor Nouws from comment #3)
> apparently Linux only

yep, don't repro in

Version: 6.2.0.0.alpha0+
Build ID: 89a60912bba7ffd6f65ea99f4664f343c5025c95
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-10-01_01:47:23
Locale: ru-RU (ru_RU); Calc: threaded
Comment 5 BogdanB 2018-10-05 15:33:33 UTC
Confirm this bug on linux, latest build.

Version: 6.2.0.0.alpha0+
Build ID: e539a492597c7312a8d0cccb4b386341bd4ec84a
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-10-05_00:43:34
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded
Comment 6 BogdanB 2018-10-05 15:53:00 UTC
I will bibisect today if I can.
Comment 7 BogdanB 2018-10-05 16:35:55 UTC
I bibisected with 6.2 (I updated the 6.2 today with "git checkout master", then with "git pull") and I CAN NOT reproduce the bug on linux through bibisecting.

But it is strange that I could reproduce on the same computer with a version 6.2 of LO from .deb files:

"master_2018-10-05_00.43.34_LibreOfficeDev_6.2.0.0.alpha0_Linux_x86-64_deb"
Comment 8 Xisco Faulí 2018-10-05 18:01:52 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c4041a3b6c703254ee3977eef1a989992506772b

author	Caolán McNamara <caolanm@redhat.com>	2018-05-28 14:33:42 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-05-29 10:07:40 +0200
commit c4041a3b6c703254ee3977eef1a989992506772b (patch)
tree f696f93baa565d865fd8a883da6d6e9d689e9eb2
parent 66cd438e3545edecaa05aa27beb289c6a6df53fc (diff)
weld SvxSwPosSizeTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara

Reproduced with gen and gtk3
Comment 9 Commit Notification 2018-10-05 22:59:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=692c26408ca3a5d9cc34a07e3a34ac0b2d87d920

Resolves: tdf#120334 crash on ESC in position and size

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2018-10-08 10:32:55 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 4854acc7929ea58632c5d0f7f80a4adc3c62b8cd
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán McNamara, thanks for the quick fix!
Comment 11 Caolán McNamara 2018-11-15 17:02:16 UTC
*** Bug 121434 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2018-11-15 23:50:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/5ea33b0f99c3586e6be2fe39cc983ad72619a68f%5E%21

Resolves: tdf#120334 crash on ESC in position and size

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.