Resolves: tdf#120334 crash on ESC in position and size

Change-Id: I50421f01ca368ec4d074db4b0add2f08b7b3fc0d
Reviewed-on: https://gerrit.libreoffice.org/61448
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 692c26408ca3a5d9cc34a07e3a34ac0b2d87d920)
Reviewed-on: https://gerrit.libreoffice.org/63435
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>